error_log.txt
C:\Users\User\Downloads\WEB\KNEX Project\KNEX_Backend\src\routes\product.routes.ts:3
import { Prisma } from "../../generated/prisma/client.js";
         ^

SyntaxError: The requested module '../../generated/prisma/client.js' does not provide an export named 'Prisma'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:182:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:266:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.15.0
